Use direct GitHub Pages upload

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,8 +7,20 @@ on:
   schedule:
     - cron: "0 15 * * *"
 
+permissions:
+  contents: read
+  id-token: write
+  pages: write
+
+concurrency:
+  cancel-in-progress: true
+  group: pages
+
 jobs:
   publish:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -20,7 +32,9 @@ jobs:
       - uses: r7kamura/weneedfeed-action@v3
         with:
           base_url: https://${{ github.repository_owner }}.github.io/${{ steps.github-script.outputs.result }}
-      - uses: peaceiris/actions-gh-pages@v3
+      - uses: actions/configure-pages@v1
+      - uses: actions/upload-pages-artifact@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: output
+          path: output
+      - uses: actions/deploy-pages@main
+        id: deployment
