--- a/weneedfeed.yml
+++ b/weneedfeed.yml
@@ -1,5 +1,6 @@
 selectors: &selectors
   item_selector: "#episodeList li"
+  item_image_selector: img
   item_link_selector: a
   item_time_selector: .date01
   item_title_selector: .description
